# Space-301

./: .env  README.md  docker-compose.yml  nginx.conf  package-lock.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
backend/space/: Dockerfile  compose.yaml  docker-compose.yml  pom.xml
backend/space/src/main/resources/: application.properties  (+1 more)
dataGenerator/: .gitignore  config.py  generator.py  main.py  receiver.py  sender.py
documentation/: api-docs.json  documentacao.html
documentation/swagger-ui/: swagger-initializer.js
frontend/space/: .env.local  Dockerfile  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/space/nginx/: default.conf
frontend/space/src/: App.tsx  index.css  main.tsx
frontend/space/src/components/: GenericList.tsx  Header.tsx  LauchItem.tsx  ParametroVital.tsx  Profile.tsx  ProtectedRoute.tsx  destination-and-date-header.tsx  types.ts  visitor-header.tsx
frontend/space/src/lib/: axios.ts
frontend/space/src/pages/: DashBoardEmpresa.tsx  History.tsx  NewLaunch.tsx  SettingsPage.tsx  SinaisVitais.tsx  SpaceSettings.tsx  VisitorDashboard.tsx
frontend/space/src/styles/: Header.css  History.css  NewLaunch.css  dashboard.css  paramero.css  profile.css  sinaisvitais.css
frontend/space/src/util/: api.ts  icon.tsx
prototypes/: README.md
rocket_generator/: .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
rocket_generator/rocket_generator/: config.py  main.py  receiver.py  rocket.py  sender.py
scripts/: astronauts.sh  rockets.sh
(+133 files in other folders)
